Adjusted to java 17. Minor refactors Added poms Added TemplateSerializer